# 2024-EESTec-Hackathon

./: .gitignore  README.md  Web_Scraping.ipynb  app.py  dictionary_page.pickle  pyproject.toml  requirements.txt  web2csv.py
.streamlit/: config.toml
src/: config.py  prompt_templates.py  utils.py
src/style/: sidebar.py  style.css
