[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "2024-EESTECH-Challenge"
version = "0.1"
authors = [
  { name="Chia Hao Chang", email="chia.hao.chang@rwth-aachen.de" },
  { name="Po-Yen Chen", email="sam9960628@gmail.com" },
  { name="Tien-Chi Lin", email="daniel703tw@gmail.com" },
]
description = "Infineon-LLM-Challenge"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas", 
    "plotly", 
]